<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_login_background01"
        android:layout_marginTop="0dp"
        android:src="@drawable/background_login"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="354dp"
        android:layout_height="423dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="204dp"
        android:src="@drawable/main_login"
        android:contentDescription="@string/content_description_login_background02"/>

    <EditText
        android:id="@+id/id_text"
        android:layout_width="211dp"
        android:layout_height="56dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="245dp"
        android:background="@null"
        android:hint="@string/hint_username"
        android:autofillHints="username"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="211dp"
        android:layout_height="56dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="305dp"
        android:background="@null"
        android:hint="@string/hint_password"
        android:autofillHints="username"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/main_loginbutton"
        android:layout_width="298dp"
        android:layout_height="63dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_login_button"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_loginbutton"
        android:layout_marginTop="449dp" />

    <ImageButton
        android:id="@+id/main_joinbutton"
        android:layout_width="298dp"
        android:layout_height="63dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_join_button"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_joinbutton"
        android:layout_marginTop="522dp" />

</RelativeLayout>
