<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/register03_main"/>

    <ImageButton
        android:id="@+id/register03_sendbutton"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:contentDescription="@string/send_authentication_number"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/register03_send"
        android:layout_marginTop="155dp"
        android:layout_marginStart="278dp" />

    <ImageButton
        android:id="@+id/register03_loginbutton"
        android:layout_width="374dp"
        android:layout_height="61dp"
        android:contentDescription="@string/completion"
        android:padding="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/register03_login"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="143dp"
        android:layout_height="50dp"
        android:background="@null"
        android:inputType="textPassword"
        android:hint="@string/enter_authentication_number"
        android:layout_marginStart="35dp"
        android:layout_marginTop="245dp" />

    <EditText
        android:id="@+id/password_text2"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:background="@null"
        android:hint="@string/phone_number"
        android:layout_marginStart="35dp"
        android:layout_marginTop="155dp"/>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="03:00"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:layout_marginStart="314dp"
        android:layout_marginTop="256dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/certification_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/certification_completed"
        android:textColor="#FF0000"
        android:textSize="13sp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="300dp"
        android:visibility="gone"/>

</RelativeLayout>
